--- a/tp2.2/tp2.2.vcxproj.filters
+++ b/tp2.2/tp2.2.vcxproj.filters
@@ -21,12 +21,21 @@
     <ClInclude Include="datastruct.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="readfile.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="sign.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
     <ClCompile Include="datastruct.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="readfile.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="main.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
